# coapis-agent

./: .context.json  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  ENTERPRISE_DEPLOYMENT.md  LICENSE  PATH_ANALYSIS_REPORT.md  QUICKSTART.md  README.md  README_en.md  SECURITY.md  analyze_homogeneity.py  assign_scenes.py  docker-compose.yml  fix_parens.py  fix_residual.sh  fix_syntax.py  install.sh  monitor_scene_chats.sh  rename_coapis.sh  tools_analysis.py
enterprise/: README.md  pyproject.toml
enterprise/coapis_enterprise/: __init__.py  license_manager.py  plugin.py
enterprise/coapis_enterprise/audit/: __init__.py  audit_logger.py  router.py
enterprise/coapis_enterprise/clustering/: __init__.py  node_manager.py  router.py
enterprise/coapis_enterprise/monitoring/: __init__.py  collector.py  router.py
enterprise/coapis_enterprise/skill_market/: __init__.py  registry.py  router.py
enterprise/coapis_enterprise/sso/: __init__.py  oidc_enhanced.py  router.py  saml_provider.py
server/: README.md  configure_llm.py  constraints.txt  pyproject.toml  requirements.txt  restart_backend.py  test_muga_api.py  test_tools_skills.py
server/_backup_20260627/: registry.py  workspace.py
server/coapis/: __init__.py  __main__.py  __version__.py  __version__.py.new  cleanup_manager.py  clock_protection_bak_20260515.py  constant.py  disk_monitor.py  enterprise_plugin.py  exceptions.py  features.py  license_crypto_bak_20260515.py  license_manager_bak_20260515.py  license_manager_lite.py  license_revocation_bak_20260515.py  license_validator_bak_20260515.py  migrate_memory.py  renewal_reminder_bak_20260515.py
server/coapis/agent/: __init__.py  agent_config_watcher.py  command_handler.py  context_compressor.py  core.py  growth.py  memory_manager.py  model_factory.py  prompt.py  prompt_builder.py  react_agent.py  routing_chat_model.py  search_config.json  skills_hub.py  skills_manager.py  templates.py  tool_guard_mixin.py  workspace.py
server/coapis/agent_stats/: __init__.py  models.py  service.py
server/coapis/agents/: __init__.py  command_handler.py  context_compressor.py  core.py  global_agent_utils.py  growth.py  memory_manager.py  model_factory.py  prompt.py  prompt_builder.py  react_agent.py  routing_chat_model.py  schema.py  service_manager.py  skills_hub.py  skills_manager.py  stream_utils.py  templates.py  tool_guard_mixin.py  workspace.py  workspace.py.bak.1782477824
server/coapis/app/: _app.py  access_control.py  access_control_api.py  agent_config_watcher.py  agent_context.py  auth.py  auth_middleware.py  cleanup.py  cleanup_api.py  config_hot_reload.py  console_push_store.py  enterprise_stubs.py  error_handler.py  external_login.py  license_api.py  migration.py  multi_agent_manager.py  scenes.py  user_provisioning.py  user_store.py  utils.py  workspace_monitor.py
server/coapis/backup/: __init__.py  models.py  orchestration.py
server/coapis/cli/: __init__.py  acp_cmd.py  admin_cmd.py  agents_cmd.py  app_cmd.py  auth_cmd.py  channels_cmd.py  chats_cmd.py  clean_cmd.py  cron_cmd.py  daemon_cmd.py  desktop_cmd.py  doctor_checks.py  doctor_cmd.py  doctor_connectivity.py  doctor_fix_runner.py  doctor_registry.py  env_cmd.py  http.py  init_cmd.py  main.py  migrate_cmd.py  mission_cmd.py  plugin_commands.py  process_utils.py  providers_cmd.py  shutdown_cmd.py  skills_cmd.py  task_cmd.py  uninstall_cmd.py  update_cmd.py  utils.py
server/coapis/config/: __init__.py  config.py  context.py  session_context.py  timezone.py  utils.py
server/coapis/envs/: __init__.py  store.py
server/coapis/evolution/: __init__.py  audit_logger.py  backend_review.py  cross_agent_evolution.py  dual_layer_evolution.py  evolution_engine.py  experience_extractor.py  knowledge_flow.py  memory_capacity.py
server/coapis/foundation/: __init__.py  core_principles.md  foundation_manager.py  knowledge_base_service.py  memory_entry.py  memory_injector.py  memory_quota.py  repository.py  repository_factory.py  repository_json.py  thinking_patterns.md
server/coapis/local_models/: __init__.py  download_manager.py  llamacpp.py  manager.py  model_manager.py  tag_parser.py
server/coapis/models/: __init__.py  scene.py  tag.py
server/coapis/plan/: __init__.py  broadcast.py  hints.py  schemas.py
server/coapis/plugins/: __init__.py  api.py  architecture.py  loader.py  registry.py  runtime.py
server/coapis/providers/: __init__.py  anthropic_provider.py  capability_baseline.py  gemini_provider.py  lmstudio_provider.py  model_capability_cache.py  multimodal_prober.py  ollama_provider.py  openai_chat_model_compat.py  openai_provider.py  openrouter_provider.py  provider.py  provider_manager.py  rate_limiter.py  retry_chat_model.py
server/coapis/recommendation/: __init__.py  engine.py  models.py  router.py  store.py
server/coapis/scripts/: migrate_agent_json_slim.py  migrate_agents_registry.py  migrate_profiles_to_workspaces.py
server/coapis/security/: __init__.py  ast_sandbox.py  audit_logger.py  command_risk_classifier.py  import_sandbox.py  resource_limiter.py  sandboxed_executor.py  secret_store.py  tool_monitor.py  tool_sandbox.py
server/coapis/services/: __init__.py  scene_agent_service.py  user_scene_service.py
server/coapis/skill_evolution/: __init__.py  bridge.py  (+2 more)
server/data/: scenes.json  user_scenes.json
server/deploy/: Dockerfile  Dockerfile.enterprise  entrypoint.sh  init_workspace.sh
server/docs/: KNOWLEDGE_BASE_MIGRATION.md
server/scripts/: generate_scene_agents.py  generate_scene_prompts.py  migrate_scene_tags.py  migrate_user_tags.py  regenerate_scene_agents_md.py  update_scene_agents_prompt.py
server/system/: audit_chain.jsonl  permissions.json  tool_usage.jsonl  trigger_log.jsonl
(+1381 files in other folders)
