[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coapis-enterprise"
version = "1.0.0"
description = "Enterprise features for CoApis"
readme = "README.md"
license = {text = "Commercial"}
requires-python = ">=3.10"
authors = [
    {name = "CoApis Team"},
]
keywords = [
    "coapis",
    "enterprise",
    "monitoring",
    "sso",
    "clustering",
    "audit",
]

dependencies = [
    "coapis>=1.0.0",
    "pydantic>=2.0.0",
    "fastapi>=0.100.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

prometheus = [
    "prometheus-client",
]

saml = [
    "python3-saml",
]

clustering = [
    "redis",
]

[tool.setuptools]
packages = {find = {where = ["."]}}

[tool.setuptools.package-data]
"coapis_enterprise" = ["*.pem", "*.crt", "*.key"]
