[project]
name = "coapis-agent"
dynamic = ["version"]
description = "CoApis is a **personal assistant** that runs in your own environment. It talks to you over multiple channels (DingTalk, Feishu, QQ, Discord, iMessage, etc.) and runs scheduled tasks according to your configuration. **What it can do is driven by Skills — the possibilities are open-ended.** Built-in skills include cron, PDF/Office handling, news digest, file reading, and more; you can add custom skills. All data and tasks run on your machine; no third-party hosting."
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    # ── 核心框架 ──
    "agentscope>=1.0.0,<2.0.0",
    "agentscope-runtime>=1.1.0,<2.0.0",
    "fastapi>=0.100.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0",
    "uvicorn>=0.40.0",
    "starlette>=0.27.0",
    "click>=8.0.0",

    # ── HTTP/通信 ──
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "aiofiles>=24.1.0",
    "websockets>=13.0",
    # anyio 4.13.0 有 busy-loop bug (CoApis#2632)，已修复于 4.13.1+
    "anyio>=4.0.0",

    # ── 数据/加密 ──
    "pyyaml>=6.0",
    "json-repair>=0.30.0",
    "orjson>=3.9",
    "packaging>=24.0",
    "cryptography>=43.0.0",
    "bcrypt>=4.0.0",

    # ── CLI/交互 ──
    "questionary>=2.1.1",
    "rich>=13.0.0",

    # ── 定时任务 ──
    "apscheduler>=3.11.2,<4",

    # ── 系统工具 ──
    "python-dotenv>=1.0.0",
    "shortuuid>=1.0.0",
    "keyring>=25.0.0",
    "mss>=9.0.0",
    "pillow>=10.0.0",
    "psutil>=6.0.0",
    "python-frontmatter>=1.3.0",

    # ── 协议/通信 ──
    "paho-mqtt>=2.0.0",
    "agent-client-protocol>=0.9.0",
    "mcp>=1.0.0",

    # ── 中文处理 ──
    "jieba>=0.42.0",
    "segno>=1.6.6",

    # ── 渠道（可选，按需安装） ──
    # 注意：渠道 SDK 已移至 [project.optional-dependencies] 的 channels extras
    # 全量镜像通过 pip install ".[channels]" 安装，最小镜像运行时按需安装
    # 保留企微、Telegram、QQ 作为核心渠道（体积小、用户多）
    "pywebview>=4.0",

    # ── AI 提供商 ──
    "google-genai>=1.67.0",
    "openai>=2.0.0",
    "anthropic>=0.10.0",

    # ── 其他 ──
    "python-socks>=2.5.3",
    "tzdata>=2024.1",
]

[tool.setuptools.dynamic]
version = {attr = "coapis.__version__.__version__"}

[tool.setuptools]
include-package-data = true

# Package discovery config - exclude enterprise modules from open-source distribution
[tool.setuptools.packages.find]
where = ["."]
exclude = [
    "coapis.app.enterprise*",
]

[tool.setuptools.package-data]
# Dockerfile copies console build output to src/coapis/console/ (no dist subdir).
"coapis" = [
    "console/**",
    "agents/md_files/**",
    "agents/skills/**",

    "security/tool_guard/rules/**",
    "security/skill_scanner/rules/**",
    "security/skill_scanner/data/**",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
coapis = "coapis.cli.main:cli"

# Optional doctor plugins: callable (DoctorRunContext) -> list[str]
# [project.entry-points."coapis.doctor"]
# my_pkg = "my_pkg.doctor:doctor_notes"
# Legacy group "copaw.doctor" is still loaded when present (backward compat).

[project.optional-dependencies]
# ── 渠道 SDK（体积较大，按需安装） ──
channels = [
    "discord-py>=2.3",
    "dingtalk-stream>=0.24.3",
    "alibabacloud-dingtalk>=2.2.42",
    "alibabacloud-tea-openapi>=0.4.4",
    "alibabacloud-tea-util>=0.3.0",
    "lark-oapi>=1.5.3",
    "python-telegram-bot>=20.0",
    "twilio>=9.10.2",
    "matrix-nio>=0.24.0",
]
wecom = [
    # 企业微信 SDK（私有包，不在公共 PyPI，需从私有源或本地安装）
    "wecom-aibot-python-sdk>=1.0.0",
]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.23.0",
    "pre-commit>=4.2.0",
    "pytest-cov>=6.2.1",
    "hypothesis>=6.0.0",
]
local = [
    "huggingface_hub>=0.20.0",
]
browser = [
    "playwright>=1.49.0",
]
whisper = [
    "openai-whisper>=20231117",
]
full = [
    "coapis[local,whisper]",
]
sip = [
    "pyVoIP>=1.6.0",
    "dashscope>=1.0.0",
    "dashscope-realtime>=0.1.0",
    "audioop-lts; python_version >= '3.13'",
]
sip-livekit = [
    "coapis[sip]",
    "livekit>=1.0.0",
    "livekit-api>=0.6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "unit: marks tests as unit tests",
    "contract: marks tests as contract tests",
    "integration: marks tests as integration tests",
]
testpaths = [
    "tests",
]

[tool.coverage.run]
source = ["coapis"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "pass",
]
fail_under = 30
show_missing = true

[tool.coverage.html]
directory = "htmlcov"
